src/ui/snapshots/starfold__ui__frames__commander-left-100x30.snap
---
source: src/ui/frames.rs
expression: left
---
╔═ S T A R / F O L D — › LEFT ═══════ commander ═╗╔═ RIGHT ════════════════════════════ commander ═╗
║  sort  filter  Bookmark  places  view  actions ║║  sort  filter  Bookmark  places  view  actions ║
║─ ~/pictures ───────────────────────────────────║║─ ~ ────────────────────────────────────────────║
║›   ▧ harbour.png                          482 B║║    ▸ empty/                                   -║
║                                                ║║    ▸ pictures/                                -║
║                                                ║║    ▸ projects/                                -║
║                                                ║║    ◇ blob.bin                             256 B║
║                                                ║║    ↗ dangling                               7 B║
║                                                ║║    ↗ notes.txt                             27 B║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
╚═■■■■■■■■■■■■ 125.0 GB free / 500.0 GB total════╝╚═■■■■■■■■■■■■ 125.0 GB free / 500.0 GB total════╝
╔═ PREVIEW — ▧ harbour.png ════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                                                               png · 64 × 48 · 1x ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  dd delete         ~/pictures  off
