src/ui/snapshots/starfold__ui__frames__commander-preview-focused-100x30.snap
---
source: src/ui/frames.rs
expression: preview_focused
---
╔═ S T A R / F O L D — LEFT ═════════ commander ═╗╔═ › RIGHT ══════════════════════════ commander ═╗
║  sort  filter  Bookmark  places  view  actions ║║  sort  filter  Bookmark  places  view  actions ║
║─ ~/pictures ───────────────────────────────────║║─ ~/empty ──────────────────────────────────────║
║    ▧ harbour.png                          482 B║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                     empty                      ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
╚════════════════════════════════════════════════╝╚════════════════════════════════════════════════╝
╔═ PREVIEW ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                        nothing to preview                                        ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  j/k scroll  i fold  z scale                                                     ~/empty  off
