src/ui/snapshots/starfold__ui__frames__commander-queued-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D — LEFT ═════════ commander ═╗╔═ › RIGHT ══════════════════════════ commander ═╗
║  sort  filter  Bookmark  places  view  actions ║║  sort  filter  Bookmark  places  view  actions ║
║─ ~/pictures ───────────────────────────────────║║─ ~/empty ──────────────────────────────────────║
║    ▧ harbour.png                          482 B║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                     empty                      ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
╚════════════════════════════════════════════════╝╚════════════════════════════════════════════════╝
╔═ PREVIEW ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                                  ║
║                                                                                                  ║
║                                        nothing to preview                                        ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                       run  clear ║
║COPY 1 item: ~/pictures/harbour.png → ~/empty · queued                                            ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  yanked 1 item                                                                   ~/empty  off
