src/ui/snapshots/starfold__ui__frames__commander-right-100x30.snap
---
source: src/ui/frames.rs
expression: right
---
╔═ S T A R / F O L D — LEFT ═════════ commander ═╗╔═ › RIGHT ══════════════════════════ commander ═╗
║  sort  filter  Bookmark  places  view  actions ║║  sort  filter  Bookmark  places  view  actions ║
║─ ~/pictures ───────────────────────────────────║║─ ~/empty ──────────────────────────────────────║
║    ▧ harbour.png                          482 B║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                     empty                      ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
║                                                ║║                                                ║
╚════════════════════════════════════════════════╝╚════════════════════════════════════════════════╝
╔═ PREVIEW ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                                  ║
║                                                                                                  ║
║                                        nothing to preview                                        ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  dd delete            ~/empty  off
