src/ui/snapshots/starfold__ui__frames__conflict-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║▸ ~                                                                                        6 items║
║─ empty/ ── 1 files · 0 dirs · 256 B ─────────────────────────────────────────────────────────────║
║›○  ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║              ╔═ CONFLICTS — 1 already exist ══════════════════════════════════════╗              ║
║              ║blob.bin                                                            ║              ║
║              ║                                                                    ║              ║
║              ║                                                                    ║              ║
╚══════════════╚═════════════ o overwrite · s skip · r edit name · esc leave queued ╝══════════════╝
╔═ PREVIEW — ◇ blob.bin ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                    File metadata ║
║ Type: application/octet-stream                                                                   ║
║ Size: 256 B                                                                                      ║
║ Permissions: -rw-r--r--                                                                          ║
║ Modified: 2026-09-10T12:00:00Z                                                                   ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  yanked 1 item                                                 1 marked · 256 B  ~/empty  off
