src/ui/snapshots/starfold__ui__frames__content-search-100x30.snap
---
source: src/ui/frames.rs
expression: wide
---
╔═ SEARCH — ~ ═════════════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ content: STAR/WIRE · complete · 1 matches · 2 binary · 0 large · 13 scanned ────────────────────║
║›   ≡ README.md:1: # STAR/WIRE · projects/starwire/README.md       md          244 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ≡ README.md ══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                       md · 244 B ║
║ # STAR/WIRE                                                                                      █
║ line 2                                                                                           ║
║ line 3                                                                                           ║
║ line 4                                                                                           ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  esc cancel / close search  space mark  c actions  F3 search                           ~  off
