src/ui/snapshots/starfold__ui__frames__content-search-60x21.snap
---
source: src/ui/frames.rs
expression: floor
---
╔═ SEARCH — ~ ═════════════════════════════════════ stack ═╗
║ ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ content: STAR/WIRE · complete · 1 matches · 2 binary · 0║
║›   ≡ README.md:1: # STAR/WIRE ·       244 B  Sep 10      ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚══════════════════════════════════════════════════════════╝
╔═ PREVIEW — ≡ README.md ══════════════════════════════════╗
║                                                    close ║
║ # STAR/WIRE                                              █
╚══════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════╗
║                                               run  clear ║
║                      nothing queued                      ║
╚══════════════════════════════════════════════════════════╝
? help  esc cancel / close search  space mark  c act  ~  off
